Fix header centering when screen resized too small.

--- a/blog.css
+++ b/blog.css
@@ -1,11 +1,9 @@
 .blog-entries {
 	position: relative;
-	width: 100%;
 	height: 100%;
 }
 
 .blog-entry {
-	width: 100%;
 	overflow: auto;
 	margin-top: 12px;
 }
@@ -20,17 +18,13 @@
 	text-align: center;
 }
 
-.blog-entry > .blog-text {
-	width: 100%;
-}
-
 .blog-text p {
 	margin-top: 0;
 }
 
 @media screen and ( min-width: 450px ) {
 	.blog-img {
-	display: inline-block;
+		display: inline-block;
 		width: 40%;
 		float: left;
 		margin-right: 12px;
